Correccion torneos movil

--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,15 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-/* Imagen para escritorio (grande) */
-.principal {
+  background-attachment: fixed; /* Siempre fijo */
   background-image: url("/public/fondo.png");
 }
 
-
-
-/* Imagen para móviles */
+/* Imagen para móviles - MANTENER fixed */
 @media (max-width: 768px) {
   .principal {
     background-image: url("/public/fondo_movil.png");
-    background-attachment: scroll;
+    /* NO cambiar background-attachment */
   }
 }
 
@@ -27,5 +21,6 @@
 @media (max-width: 480px) {
   .principal {
     background-image: url("/public/fondo_movil.png");
+    /* Mantener fixed aquí también */
   }
 }
