--- a/src/pages/Resultados.css
+++ b/src/pages/Resultados.css
@@ -27,8 +27,30 @@
     border-radius: 4px;
     font-size: 16px;
     cursor: pointer;
-    width: 100%;
-    max-width: 300px;
+   
+    width: auto;      /* 👈 se ajusta al contenido */
+    min-width: unset; /* 👈 evita forzar tamaño mínimo */
+    max-width: unset; /* 👈 elimina límite de 300px */
+}
+
+.selector-equipos {
+    margin: 20px 0;
+    text-align: center;
+}
+
+
+.select-equipo {
+    background-color: #1f1a20;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    padding: 8px 15px;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+   
+    width: auto;      /* 👈 se ajusta al contenido */
+    min-width: unset; /* 👈 evita forzar tamaño mínimo */
+    max-width: unset; /* 👈 elimina límite de 300px */
 }
 
 
@@ -58,7 +80,7 @@
 
 .fecha-partido {
     font-size: 0.9rem;
-    color: rgba(255, 255, 255, 0.7);
+    color: white;
     text-align: right;
     padding-right: 10px;
 }
