--- a/src/pages/TablaPosiciones.css
+++ b/src/pages/TablaPosiciones.css
@@ -7,6 +7,13 @@
   align-items: center;
 }
 
+.ultima-fecha {
+  margin-top: 10px;
+  font-size: 0.9rem;
+  color: white;
+  text-align: right;
+}
+
 /* Wrapper del scroll - Versión corregida */
 .tabla-wrapper {
   width: 100%;
